custom cursor and layout tweaks

--- a/css/pages/tabletop.scss
+++ b/css/pages/tabletop.scss
@@ -14,9 +14,14 @@
 
 body#tabletop {
   background:$tertiary url('../img/bgs/cave.png') no-repeat top left;
+  cursor: url('../img/cursor-pointer.png'), auto;
   background-attachment: fixed;
   background-size: cover;
   color:#FFF;
+}
+
+* a, .buttons, .button, .orb {
+  cursor: url('../img/cursor-pointer.png'), pointer;
 }
 
 #app-header {
@@ -205,8 +210,9 @@ body#tabletop {
 
 #actionbar {
 	position:absolute;
+  left:50%;
+  transform: translate(-50%);
 	bottom:24px;
-	right:24px;
 }
 
 #health {
