--- a/css/pages/tabletop.scss
+++ b/css/pages/tabletop.scss
@@ -20,7 +20,7 @@ body#tabletop {
   color:#FFF;
 }
 
-* a, .buttons, .button, .orb {
+#tabletop a, #tabletop .buttons, #tabletop .button, #tabletop .orb {
   cursor: url('../img/cursor-pointer.png'), pointer;
 }
 
